# PocketTrainer

./: .gitignore  .gitmodules  LICENSE  README.md  TECH_DEBT.md  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bpe_tokenizer.h  loRA_trainer.cpp  loRA_trainer.h  parallel_executor.h  qlora_trainer.h  safetensors_reader.h  text_dataset.h  trainer_config.h  training_jni.cpp  training_jni_stub.cpp
app/src/main/java/com/pockettrainer/: MainActivity.kt  PocketTrainerApp.kt  README.md
app/src/main/java/com/pockettrainer/data/: DatasetRepository.kt  ModelRepository.kt  Models.kt
app/src/main/java/com/pockettrainer/training/: NativeTraining.kt  TrainStep.kt  TrainingCallback.kt  TrainingConfig.kt  TrainingForegroundService.kt  TrainingPresets.kt  TrainingViewModel.kt  UiState.kt
app/src/main/java/com/pockettrainer/ui/: AdvancedOptionsPanel.kt  LoraManagerScreen.kt  LoraManagerViewModel.kt  LossCurveView.kt  TrainingScreen.kt
app/src/main/java/com/pockettrainer/ui/screens/: ClusterScreen.kt  DatasetScreen.kt  HomeScreen.kt  ModelScreen.kt  SettingsScreen.kt  TrainScreen.kt
app/src/main/java/com/pockettrainer/ui/theme/: Theme.kt
app/src/main/res/values/: themes.xml
docs/: ARCHITECTURE.md  AUDIT_REPORT.md
